// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkersTab should render 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-715 makeStyles-filterActionsContainerPadding-717"
    >
      <div
        class="MuiBox-root MuiBox-root-744 makeStyles-filterStatusContainer-718 makeStyles-autocompleteFilterPosition-743"
      >
        <div
          class="makeStyles-floatingFilterWrapper-724 makeStyles-filterWrapper-723 makeStyles-buttonContainer-746 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-725"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-733"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Clients
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-727"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-679 makeStyles-primaryButtonLarge-681 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-worker-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign Worker
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      aria-label="project-workers-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trades
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Status in Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-852 makeStyles-pointer-765"
          data-testid="worker-list-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-userCenter-774"
            >
              <span
                class="MuiBadge-root makeStyles-avatarPosition-784 makeStyles-avatarWithSmallBadge-838"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circle makeStyles-avatarWrapper-836 makeStyles-avatarMedium-839 MuiAvatar-colorDefault"
                >
                  <svg
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                    />
                    <title>
                      Active
                    </title>
                  </svg>
                </div>
                <span
                  class="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle"
                >
                  <svg>
                    accepted.svg
                  </svg>
                </span>
              </span>
              <a
                class="Link-root-853"
                data-testid="worker-row-btn"
                href="/workers/detail/2"
                title="View Worker details"
              >
                John Doe
              </a>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Ceiling, Plumbing
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="MuiChip-root makeStyles-statusChip-824 makeStyles-pending-831  MuiChip-colorPrimary"
            >
              <span
                class="MuiChip-label"
              >
                Pending
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-852 makeStyles-pointer-765"
          data-testid="worker-list-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-userCenter-774"
            >
              <span
                class="MuiBadge-root makeStyles-avatarPosition-784 makeStyles-avatarWithSmallBadge-838"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circle makeStyles-avatarWrapper-836 makeStyles-avatarMedium-839 MuiAvatar-colorDefault"
                >
                  <svg
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                    />
                    <title>
                      Active
                    </title>
                  </svg>
                </div>
                <span
                  class="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle"
                >
                  <svg>
                    accepted.svg
                  </svg>
                </span>
              </span>
              <a
                class="Link-root-853"
                data-testid="worker-row-btn"
                href="/workers/detail/11029ead-e3eb-48d5-a658-cd818a70719f"
                title="View Worker details"
              >
                John Doe
              </a>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Ceiling, Plumbing
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="MuiChip-root makeStyles-statusChip-824 makeStyles-pending-831  MuiChip-colorPrimary"
            >
              <span
                class="MuiChip-label"
              >
                Pending
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-854"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-855 makeStyles-close-866 closed"
      data-testid="worker-drawer-detail"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-856 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-858"
        >
          <div
            class="makeStyles-drawerButton-859"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-857"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-860 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Worker Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-listDetail-885"
        >
          <div
            class="makeStyles-company-886"
          >
            <div
              class="makeStyles-drawerText-862"
            >
              <p
                class="MuiTypography-root makeStyles-listAccent-887 makeStyles-entityTitle-884 MuiTypography-body1"
              >
                 
              </p>
              <div
                class="makeStyles-drawerMainText-863"
              >
                <span>
                  -
                </span>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-861"
            >
              <div
                class="makeStyles-drawerColumnDirection-870"
              >
                <div
                  class="makeStyles-drawerRowDirection-871"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                    />
                  </svg>
                  <div
                    class="makeStyles-drawerText-862 makeStyles-drawerTextSeparation-864"
                  >
                    <p
                      class="MuiTypography-root makeStyles-cardFont-897  MuiTypography-body1"
                    >
                      
                      <span
                        class=" "
                      >
                        -
                      </span>
                    </p>
                    <p
                      class="MuiTypography-root makeStyles-cardFont-897  MuiTypography-body1"
                    >
                      
                      
                      
                      
                    </p>
                    <p
                      class="MuiTypography-root makeStyles-cardFont-897  MuiTypography-body1"
                    >
                      -
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-861"
            >
              <div
                class="makeStyles-drawerColumnDirection-870"
              >
                <div
                  class="makeStyles-drawerRowDirection-871"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                    />
                  </svg>
                  <div
                    class="makeStyles-drawerText-862 makeStyles-drawerTextSeparation-864"
                  />
                </div>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-861"
            >
              <div
                class="makeStyles-drawerColumnDirection-870"
              >
                <div
                  class="makeStyles-drawerRowDirection-871"
                >
                  <svg
                    class="MuiSvgIcon-root"
                  >
                    emergency-contact.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-862 makeStyles-drawerTextSeparation-864"
                  />
                </div>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root makeStyles-drawerDivider-865"
          />
          <div
            class="makeStyles-ctaWrapper-888"
          >
            <span
              class=""
              data-testid="controlled-button"
              tabindex="-1"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-686 makeStyles-borderPrimaryButton-678 makeStyles-primaryButtonPadding-680"
                data-testid="drawerButton"
                href="/workers/detail/null"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  Worker Detail
                </span>
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkersTab should render empty 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-39 makeStyles-filterActionsContainerPadding-41"
    >
      <div
        class="MuiBox-root MuiBox-root-68 makeStyles-filterStatusContainer-42 makeStyles-autocompleteFilterPosition-67"
      >
        <div
          class="makeStyles-floatingFilterWrapper-48 makeStyles-filterWrapper-47 makeStyles-buttonContainer-70 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-49"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-57"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Clients
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-51"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-3 makeStyles-primaryButtonLarge-5 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-worker-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign Worker
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class=" makeStyles-container-74"
    >
      <div>
        <div
          class="MuiAvatar-root MuiAvatar-circle makeStyles-missingAvatarWrapper-85 makeStyles-missingAvatarBig-86 MuiAvatar-colorDefault"
        >
          <svg>
            workers.svg
          </svg>
        </div>
      </div>
      <p
        class="MuiTypography-root makeStyles-missingListText-75 MuiTypography-body1"
      >
        There are no Workers assigned
      </p>
    </div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-93 makeStyles-close-104 closed"
      data-testid="worker-drawer-detail"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-94 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-96"
        >
          <div
            class="makeStyles-drawerButton-97"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-95"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-98 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Worker Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-listDetail-123"
        >
          <div
            class="makeStyles-company-124"
          >
            <div
              class="makeStyles-drawerText-100"
            >
              <p
                class="MuiTypography-root makeStyles-listAccent-125 makeStyles-entityTitle-122 MuiTypography-body1"
              >
                 
              </p>
              <div
                class="makeStyles-drawerMainText-101"
              >
                <span>
                  -
                </span>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-99"
            >
              <div
                class="makeStyles-drawerColumnDirection-108"
              >
                <div
                  class="makeStyles-drawerRowDirection-109"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                    />
                  </svg>
                  <div
                    class="makeStyles-drawerText-100 makeStyles-drawerTextSeparation-102"
                  >
                    <p
                      class="MuiTypography-root makeStyles-cardFont-135  MuiTypography-body1"
                    >
                      
                      <span
                        class=" "
                      >
                        -
                      </span>
                    </p>
                    <p
                      class="MuiTypography-root makeStyles-cardFont-135  MuiTypography-body1"
                    >
                      
                      
                      
                      
                    </p>
                    <p
                      class="MuiTypography-root makeStyles-cardFont-135  MuiTypography-body1"
                    >
                      -
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-99"
            >
              <div
                class="makeStyles-drawerColumnDirection-108"
              >
                <div
                  class="makeStyles-drawerRowDirection-109"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                    />
                  </svg>
                  <div
                    class="makeStyles-drawerText-100 makeStyles-drawerTextSeparation-102"
                  />
                </div>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-99"
            >
              <div
                class="makeStyles-drawerColumnDirection-108"
              >
                <div
                  class="makeStyles-drawerRowDirection-109"
                >
                  <svg
                    class="MuiSvgIcon-root"
                  >
                    emergency-contact.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-100 makeStyles-drawerTextSeparation-102"
                  />
                </div>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root makeStyles-drawerDivider-103"
          />
          <div
            class="makeStyles-ctaWrapper-126"
          >
            <span
              class=""
              data-testid="controlled-button"
              tabindex="-1"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-10 makeStyles-borderPrimaryButton-2 makeStyles-primaryButtonPadding-4"
                data-testid="drawerButton"
                href="/workers/detail/null"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  Worker Detail
                </span>
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkersTab should render loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`WorkersTab should render with company 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-947 makeStyles-filterActionsContainerPadding-949"
    >
      <div
        class="MuiBox-root MuiBox-root-976 makeStyles-filterStatusContainer-950 makeStyles-autocompleteFilterPosition-975"
      >
        <div
          class="makeStyles-floatingFilterWrapper-956 makeStyles-filterWrapper-955 makeStyles-buttonContainer-978 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-957"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-965"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Clients
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-959"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-911 makeStyles-primaryButtonLarge-913 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-worker-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign Worker
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      aria-label="project-workers-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trades
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Status in Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-1084 makeStyles-pointer-997"
          data-testid="worker-list-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-userCenter-1006"
            >
              <span
                class="MuiBadge-root makeStyles-avatarPosition-1016 makeStyles-avatarWithSmallBadge-1070"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circle makeStyles-avatarWrapper-1068 makeStyles-avatarMedium-1071 MuiAvatar-colorDefault"
                >
                  <svg
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                    />
                    <title>
                      Pending Invitation
                    </title>
                  </svg>
                </div>
                <span
                  class="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle"
                >
                  <svg>
                    migrated.svg
                  </svg>
                </span>
              </span>
              <a
                class="Link-root-1085"
                data-testid="worker-row-btn"
                href="/workers/detail/11029ead-e34c-48d5-a658-c1241d70719f"
                title="View Worker details"
              >
                Christian Ristango
              </a>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Robert C. Martin
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Ceiling, Plumbing
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="MuiChip-root makeStyles-statusChip-1056 makeStyles-pending-1063  MuiChip-colorPrimary"
            >
              <span
                class="MuiChip-label"
              >
                Pending
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-1086"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-1087 makeStyles-close-1098 closed"
      data-testid="worker-drawer-detail"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-1088 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-1090"
        >
          <div
            class="makeStyles-drawerButton-1091"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-1089"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-1092 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Worker Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-listDetail-1117"
        >
          <div
            class="makeStyles-company-1118"
          >
            <div
              class="makeStyles-drawerText-1094"
            >
              <p
                class="MuiTypography-root makeStyles-listAccent-1119 makeStyles-entityTitle-1116 MuiTypography-body1"
              >
                 
              </p>
              <div
                class="makeStyles-drawerMainText-1095"
              >
                <span>
                  -
                </span>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-1093"
            >
              <div
                class="makeStyles-drawerColumnDirection-1102"
              >
                <div
                  class="makeStyles-drawerRowDirection-1103"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                    />
                  </svg>
                  <div
                    class="makeStyles-drawerText-1094 makeStyles-drawerTextSeparation-1096"
                  >
                    <p
                      class="MuiTypography-root makeStyles-cardFont-1129  MuiTypography-body1"
                    >
                      
                      <span
                        class=" "
                      >
                        -
                      </span>
                    </p>
                    <p
                      class="MuiTypography-root makeStyles-cardFont-1129  MuiTypography-body1"
                    >
                      
                      
                      
                      
                    </p>
                    <p
                      class="MuiTypography-root makeStyles-cardFont-1129  MuiTypography-body1"
                    >
                      -
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-1093"
            >
              <div
                class="makeStyles-drawerColumnDirection-1102"
              >
                <div
                  class="makeStyles-drawerRowDirection-1103"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                    />
                  </svg>
                  <div
                    class="makeStyles-drawerText-1094 makeStyles-drawerTextSeparation-1096"
                  />
                </div>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-1093"
            >
              <div
                class="makeStyles-drawerColumnDirection-1102"
              >
                <div
                  class="makeStyles-drawerRowDirection-1103"
                >
                  <svg
                    class="MuiSvgIcon-root"
                  >
                    emergency-contact.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-1094 makeStyles-drawerTextSeparation-1096"
                  />
                </div>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root makeStyles-drawerDivider-1097"
          />
          <div
            class="makeStyles-ctaWrapper-1120"
          >
            <span
              class=""
              data-testid="controlled-button"
              tabindex="-1"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-918 makeStyles-borderPrimaryButton-910 makeStyles-primaryButtonPadding-912"
                data-testid="drawerButton"
                href="/workers/detail/null"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  Worker Detail
                </span>
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
